--- a/staff/css/style.css
+++ b/staff/css/style.css
@@ -1555,9 +1555,9 @@ margin-top: 10%;
 
 .case_list i {
   display: inline-block;
-  background: #dea8d0;
+  background: #52a6d2;
   border-radius: 3em;
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   color: #fff;
   padding: .2em .8em;
   margin-bottom: .6em;
