--- a/css/style.css
+++ b/css/style.css
@@ -106,10 +106,6 @@ input[type="submit"], input[type="button"], button {
     opacity: 0;
 }
 
-.my-image {
-  border: none;
-  outline: none;
-}
 
 #header:before {
     content: '';
@@ -1190,7 +1186,7 @@ Project
 }
 
 .top_main .catch i {
-  font-size: 11rem;
+  font-size: 6rem;
 }
 
 @media screen and (max-width: 767px) {
@@ -1518,6 +1514,7 @@ margin-top: 10%;
 .case_list img {
   width: 100%;
   object-fit: cover;
+  aspect-ratio: 3 / 2;
 }
 
 .case_list p {
@@ -1530,34 +1527,11 @@ margin-top: 10%;
   }
 }
 
-
-/* PCでは非表示（スマホでは表示） */
-.pchide {
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-  .pchide {
-    display: block; /* または必要に応じて inline, flex など */
-  }
-}
-
-/* SPでは非表示（PCでは表示） */
-.sphide {
-  display: block;
-}
-
-@media screen and (max-width: 768px) {
-  .sphide {
-    display: none;
-  }
-}
-
 .case_list i {
   display: inline-block;
-  background: #52a6d2;
+  background: #dea8d0;
   border-radius: 3em;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   color: #fff;
   padding: .2em .8em;
   margin-bottom: .6em;
@@ -1567,7 +1541,6 @@ margin-top: 10%;
   .case_list i {
     padding: .4em 1.5em;
     margin-bottom: 1.4em;
-    font-size: 1.8rem;
   }
 }
 
@@ -1578,7 +1551,7 @@ margin-top: 10%;
     gap: 2.8rem;
   }
   .case_list li {
-    width: 100%;
+    width: calc(33.33% - 1.866rem);
   }
 }
 
@@ -3192,7 +3165,7 @@ margin-top: 10%;
 }
 
 .serv_feature {
-  margin-bottom: 2%;
+  margin-bottom: 12rem;
 }
 
 
@@ -3293,6 +3266,7 @@ margin-top: 10%;
 .mt10{
   margin-top: -10px;
 }
+
 }
 
 .serv_list {
@@ -3308,6 +3282,7 @@ margin-top: 10%;
     padding: 10rem 0 14rem;
   }
   .serv_list ul {
+    display: flex;
     flex-wrap: wrap;
     gap: 4rem 3.3rem;
   }
@@ -3327,26 +3302,18 @@ margin-top: 10%;
 
 @media screen and (min-width: 768px) {
   .serv_list li {
-    width: calc(80% - 1.65rem);
-    margin-top: 14px;
+    width: calc(50% - 1.65rem);
   }
   .serv_list li a {
     display: flex;
     flex-flow: row-reverse;
   }
   .serv_list li figure {
-    width: 50%;
+    width: 21rem;
   }
   .serv_list li dl {
     width: calc(100% - 21rem);
   }
-
-  figure {
-  display: flex;
-  gap: 4px; /* 画像の間にすき間が欲しいなら */
-}
-
-
 }
 
 .serv_list li a:hover, .serv_list li a.active {
@@ -3358,7 +3325,7 @@ margin-top: 10%;
 }
 
 .serv_list dl {
-  padding: 5rem 5rem;
+  padding: 5rem 4rem 0;
   transition: background .2s ease-in;
 }
 
@@ -4121,7 +4088,7 @@ margin-top: 10%;
     margin-bottom: 3.3rem;
   }
   .list_wrap .list {
-    width: 120rem;
+    width: 92rem;
   }
 }
 
@@ -4134,10 +4101,6 @@ margin-top: 10%;
   .list_wrap .sidebar dt {
     margin-bottom: 2rem;
   }
-}
-
-.image_flex{
-display: flex;
 }
 
 .list_wrap .sidebar a {
